--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,32 @@
     color:#e2e8f0;
     overflow-x:hidden;
   }
+  .identity-icons{
+  margin-top:25px;
+  display:flex;
+  gap:22px;
+  justify-content:center;
+}
+
+.identity-icons a{
+  width:26px;
+  height:26px;
+  display:inline-block;
+}
+
+.identity-icons svg{
+  fill:#94a3b8;
+  width:100%;
+  height:100%;
+  transition:all .25s ease;
+}
+
+.identity-icons a:hover svg{
+  fill:#38bdf8;
+  filter:drop-shadow(0 0 6px #38bdf8);
+  transform:scale(1.1);
+}
+  
 
   /* NAVBAR */
   .navbar{
