--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -223,27 +223,36 @@ body{
   <!-- ICON LINKS -->
   <div class="identity-icons">
 
-    <!-- Scholar -->
-    <a href="YOUR_GOOGLE_SCHOLAR_LINK" target="_blank">
-      <svg viewBox="0 0 24 24"><path d="M12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
-    </a>
+  <!-- Google Scholar -->
+  <a href="YOUR_GOOGLE_SCHOLAR_LINK" target="_blank" aria-label="Google Scholar">
+    <svg viewBox="0 0 24 24">
+      <path d="M12 3L1 9l11 6 9-6-9-6zm0 8.3L4.74 9 12 5.7 19.26 9 12 11.3z"/>
+    </svg>
+  </a>
 
-    <!-- ORCID -->
-    <a href="YOUR_ORCID_LINK" target="_blank">
-      <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12s5.37 12 12 12 12-5.37 12-12S18.63 0 12 0z"/></svg>
-    </a>
+  <!-- ORCID -->
+  <a href="YOUR_ORCID_LINK" target="_blank" aria-label="ORCID">
+    <svg viewBox="0 0 24 24">
+      <path d="M12 0C5.37 0 0 5.37 0 12s5.37 12 12 12 12-5.37 12-12S18.63 0 12 0zm-2.4 6.5h1.8v11h-1.8v-11zm3.8 0h3.1c2.4 0 4.2 1.7 4.2 4.1 0 2.5-1.8 4.1-4.2 4.1h-3.1V6.5z"/>
+    </svg>
+  </a>
 
-    <!-- GitHub -->
-    <a href="https://github.com/sayantan34" target="_blank">
-      <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.2 11.39"/></svg>
-    </a>
+  <!-- GitHub -->
+  <a href="https://github.com/sayantan34" target="_blank" aria-label="GitHub">
+    <svg viewBox="0 0 24 24">
+      <path d="M12 0C5.37 0 0 5.37 0 12c0 4.99 3.16 9.24 7.56 10.74.55.1.75-.24.75-.53v-1.87c-3.07.67-3.72-1.48-3.72-1.48-.5-1.27-1.23-1.61-1.23-1.61-1-.69.08-.68.08-.68 1.1.08 1.68 1.13 1.68 1.13.98 1.67 2.57 1.19 3.19.91.1-.71.38-1.19.69-1.47-2.45-.28-5.03-1.22-5.03-5.43 0-1.2.43-2.19 1.13-2.96-.11-.28-.49-1.42.11-2.96 0 0 .93-.3 3.05 1.13.88-.25 1.83-.37 2.77-.37.94 0 1.89.12 2.77.37 2.12-1.43 3.05-1.13 3.05-1.13.6 1.54.22 2.68.11 2.96.7.77 1.13 1.76 1.13 2.96 0 4.22-2.58 5.14-5.04 5.42.39.33.73.99.73 2v2.97c0 .29.2.63.76.52C20.85 21.23 24 16.98 24 12 24 5.37 18.63 0 12 0z"/>
+    </svg>
+  </a>
 
-    <!-- LinkedIn -->
-    <a href="YOUR_LINKEDIN_LINK" target="_blank">
-      <svg viewBox="0 0 24 24"><path d="M4 3h4v18H4z"/></svg>
-    </a>
+  <!-- LinkedIn -->
+  <a href="YOUR_LINKEDIN_LINK" target="_blank" aria-label="LinkedIn">
+    <svg viewBox="0 0 24 24">
+      <path d="M4.98 3.5C4.98 5 3.87 6.1 2.49 6.1 1.11 6.1 0 5 0 3.5S1.11.9 2.49.9c1.38 0 2.49 1.1 2.49 2.6zM0 8h5v16H0V8zm7.5 0H12v2.2h.1c.6-1.1 2.1-2.2 4.3-2.2 4.6 0 5.4 3 5.4 6.9V24h-5v-7.7c0-1.8 0-4.2-2.6-4.2-2.6 0-3 2-3 4v7.9h-5V8z"/>
+    </svg>
+  </a>
 
-  </div>
+</div>
+
 
 </div> <!-- IMPORTANT: hero properly closed -->
 
