--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,29 @@ body{
   color:#e2e8f0;
   overflow-x:hidden;
 }
+/* PROJECT SECTIONS */
+.section h2{
+  margin-top:60px;
+}
+
+.section h3{
+  color:#38bdf8;
+  margin-top:35px;
+}
+
+.section strong{
+  color:#e2e8f0;
+}
+
+.section ul{
+  margin-top:10px;
+  margin-bottom:25px;
+}
+
+.section ul li{
+  list-style:disc;
+  margin-left:20px;
+}
 
 /* NAVBAR */
 .navbar{
